fix(columnConfig): Fixed Z-Index issue with Column Config Menu

--- a/src/styles/rx-data-table.less
+++ b/src/styles/rx-data-table.less
@@ -201,6 +201,7 @@
 
 .data-table-config {
     position: absolute;
+    z-index: 1;
     overflow: visible;
     right: 0px;
     background-color: #FFF;
